--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
   <meta charset="UTF-8">
   <title>PDV Barbearia</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -17,6 +14,9 @@
   <div class="menu">
     <button onclick="show('pdv')">💈</button>
     <button onclick="show('clientes')">👤</button>
+    <button onclick="show('planos')">💳</button>
+    <button onclick="show('estoque')">📦</button>
+    <button onclick="show('despesas')">🧾</button>
     <button onclick="show('agenda')">📅</button>
   </div>
 
@@ -45,7 +45,6 @@
 
       <button onclick="finalizarVenda()">Finalizar Venda</button>
 
-      <!-- GRÁFICO EM TEMPO REAL -->
       <canvas id="graficoPDV"></canvas>
     </div>
 
@@ -53,8 +52,42 @@
     <div id="clientes" class="section">
       <h2>Clientes</h2>
       <input id="nomeCliente" placeholder="Nome do cliente">
-      <button onclick="salvarCliente()">Salvar</button>
+      <select id="planoCliente"></select>
+      <button onclick="salvarCliente()">Salvar Cliente</button>
       <ul id="listaClientes"></ul>
+    </div>
+
+    <!-- PLANOS -->
+    <div id="planos" class="section">
+      <h2>Planos</h2>
+      <input id="nomePlano" placeholder="Nome do plano">
+      <input type="number" id="qtdPlano" placeholder="Qtd serviços">
+      <input id="tipoPlano" placeholder="Tipo do serviço (ex: Corte)">
+      <button onclick="salvarPlano()">Salvar Plano</button>
+      <ul id="listaPlanos"></ul>
+    </div>
+
+    <!-- ESTOQUE -->
+    <div id="estoque" class="section">
+      <h2>Produtos / Serviços</h2>
+      <input id="nomeProd" placeholder="Nome">
+      <input type="number" id="valorProd" placeholder="Valor">
+      <select id="tipoProd">
+        <option value="servico">Serviço</option>
+        <option value="produto">Produto</option>
+      </select>
+      <button onclick="salvarProduto()">Salvar</button>
+      <ul id="listaEstoque"></ul>
+    </div>
+
+    <!-- DESPESAS -->
+    <div id="despesas" class="section">
+      <h2>Despesas</h2>
+      <input id="descDespesa" placeholder="Descrição">
+      <input type="number" id="valorDespesa" placeholder="Valor">
+      <input type="date" id="dataDespesa">
+      <button onclick="salvarDespesa()">Salvar</button>
+      <ul id="listaDespesas"></ul>
     </div>
 
     <!-- AGENDA -->
@@ -63,6 +96,7 @@
       <input type="date" id="dataAgenda">
       <input type="time" id="horaAgenda">
       <input id="clienteAgenda" placeholder="Cliente">
+      <input id="servicoAgenda" placeholder="Serviço">
       <button onclick="salvarAgenda()">Salvar</button>
       <ul id="listaAgenda"></ul>
     </div>
