--- a/index.html
+++ b/index.html
@@ -1,107 +1,118 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>PDV Barbearia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>PDV Barbearia</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <div class="overlay">
 
-  <div class="menu">
-    <button onclick="show('pdv')">💈</button>
-    <button onclick="show('clientes')">👤</button>
-    <button onclick="show('planos')">💳</button>
-    <button onclick="show('estoque')">📦</button>
-    <button onclick="show('despesas')">🧾</button>
-    <button onclick="show('agenda')">📅</button>
-  </div>
+<div class="menu">
+  <button onclick="show('pdv')">💈</button>
+  <button onclick="show('clientes')">👤</button>
+  <button onclick="show('planos')">💳</button>
+  <button onclick="show('estoque')">📦</button>
+  <button onclick="show('despesas')">🧾</button>
+  <button onclick="show('agenda')">📅</button>
+  <button onclick="show('caixa')">📊</button>
+</div>
 
-  <div class="content">
+<div class="content">
 
-    <!-- PDV -->
-    <div id="pdv" class="section active">
-      <h2>PDV</h2>
+<!-- PDV -->
+<div id="pdv" class="section active">
+<h2>PDV</h2>
 
-      <select id="cliente"></select>
-      <select id="produto"></select>
-      <button onclick="addCarrinho()">Adicionar</button>
+<select id="cliente"></select>
+<select id="produto"></select>
+<button onclick="addCarrinho()">Adicionar</button>
 
-      <table id="carrinho"></table>
-      <div class="total">Total: R$ <span id="total">0.00</span></div>
+<table id="carrinho"></table>
+<div class="total">Total: R$ <span id="total">0.00</span></div>
 
-      <select id="pagamento">
-        <option value="">Forma de pagamento</option>
-        <option value="dinheiro">Dinheiro</option>
-        <option value="pix">Pix</option>
-        <option value="cartao">Cartão</option>
-      </select>
+<select id="pagamento">
+  <option value="">Forma de pagamento</option>
+  <option value="dinheiro">Dinheiro</option>
+  <option value="pix">Pix</option>
+  <option value="cartao">Cartão</option>
+</select>
 
-      <input type="number" id="valorPago" placeholder="Valor pago (dinheiro)">
-      <div id="troco"></div>
+<input type="number" id="valorPago" placeholder="Valor pago (dinheiro)">
+<div id="troco"></div>
 
-      <button onclick="finalizarVenda()">Finalizar Venda</button>
+<button onclick="finalizarVenda()">Finalizar Venda</button>
 
-      <canvas id="graficoPDV"></canvas>
-    </div>
+<canvas id="graficoPDV"></canvas>
+</div>
 
-    <!-- CLIENTES -->
-    <div id="clientes" class="section">
-      <h2>Clientes</h2>
-      <input id="nomeCliente" placeholder="Nome do cliente">
-      <select id="planoCliente"></select>
-      <button onclick="salvarCliente()">Salvar Cliente</button>
-      <ul id="listaClientes"></ul>
-    </div>
+<!-- CLIENTES -->
+<div id="clientes" class="section">
+<h2>Clientes</h2>
+<input id="nomeCliente" placeholder="Nome">
+<select id="planoCliente"></select>
+<button onclick="salvarCliente()">Salvar Cliente</button>
+<ul id="listaClientes"></ul>
+</div>
 
-    <!-- PLANOS -->
-    <div id="planos" class="section">
-      <h2>Planos</h2>
-      <input id="nomePlano" placeholder="Nome do plano">
-      <input type="number" id="qtdPlano" placeholder="Qtd serviços">
-      <input id="tipoPlano" placeholder="Tipo do serviço (ex: Corte)">
-      <button onclick="salvarPlano()">Salvar Plano</button>
-      <ul id="listaPlanos"></ul>
-    </div>
+<!-- PLANOS -->
+<div id="planos" class="section">
+<h2>Planos</h2>
+<input id="nomePlano" placeholder="Nome do plano">
+<input type="number" id="qtdPlano" placeholder="Qtd serviços">
+<input id="tipoPlano" placeholder="Tipo do serviço">
+<button onclick="salvarPlano()">Salvar Plano</button>
+<ul id="listaPlanos"></ul>
+</div>
 
-    <!-- ESTOQUE -->
-    <div id="estoque" class="section">
-      <h2>Produtos / Serviços</h2>
-      <input id="nomeProd" placeholder="Nome">
-      <input type="number" id="valorProd" placeholder="Valor">
-      <select id="tipoProd">
-        <option value="servico">Serviço</option>
-        <option value="produto">Produto</option>
-      </select>
-      <button onclick="salvarProduto()">Salvar</button>
-      <ul id="listaEstoque"></ul>
-    </div>
+<!-- ESTOQUE -->
+<div id="estoque" class="section">
+<h2>Produtos / Serviços</h2>
+<input id="nomeProd" placeholder="Nome">
+<input type="number" id="valorProd" placeholder="Valor">
+<select id="tipoProd">
+  <option value="servico">Serviço</option>
+  <option value="produto">Produto</option>
+</select>
+<button onclick="salvarProduto()">Salvar</button>
+<ul id="listaEstoque"></ul>
+</div>
 
-    <!-- DESPESAS -->
-    <div id="despesas" class="section">
-      <h2>Despesas</h2>
-      <input id="descDespesa" placeholder="Descrição">
-      <input type="number" id="valorDespesa" placeholder="Valor">
-      <input type="date" id="dataDespesa">
-      <button onclick="salvarDespesa()">Salvar</button>
-      <ul id="listaDespesas"></ul>
-    </div>
+<!-- DESPESAS -->
+<div id="despesas" class="section">
+<h2>Despesas</h2>
+<input id="descDespesa" placeholder="Descrição">
+<input type="number" id="valorDespesa" placeholder="Valor">
+<input type="date" id="dataDespesa">
+<button onclick="salvarDespesa()">Salvar</button>
+<ul id="listaDespesas"></ul>
+</div>
 
-    <!-- AGENDA -->
-    <div id="agenda" class="section">
-      <h2>Agenda</h2>
-      <input type="date" id="dataAgenda">
-      <input type="time" id="horaAgenda">
-      <input id="clienteAgenda" placeholder="Cliente">
-      <input id="servicoAgenda" placeholder="Serviço">
-      <button onclick="salvarAgenda()">Salvar</button>
-      <ul id="listaAgenda"></ul>
-    </div>
+<!-- AGENDA -->
+<div id="agenda" class="section">
+<h2>Agenda</h2>
+<input type="date" id="dataAgenda">
+<input type="time" id="horaAgenda">
+<input id="clienteAgenda" placeholder="Cliente">
+<input id="servicoAgenda" placeholder="Serviço">
+<button onclick="salvarAgenda()">Salvar</button>
+<ul id="listaAgenda"></ul>
+</div>
 
-  </div>
+<!-- CAIXA -->
+<div id="caixa" class="section">
+<h2>Fechamento de Caixa</h2>
+<button onclick="fecharCaixa()">📄 Gerar PDF</button>
+<div id="resumoCaixa"></div>
+</div>
+
+</div>
 </div>
 
 <script src="script.js"></script>
