--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -20,7 +19,6 @@
   <button onclick="show('planos')">💳</button>
   <button onclick="show('estoque')">📦</button>
   <button onclick="show('despesas')">🧾</button>
-  <button onclick="show('agenda')">📅</button>
 </div>
 
 <div class="content">
@@ -29,15 +27,14 @@
 <div id="pdv" class="section active">
 <h2>PDV</h2>
 
-<!-- CAIXA NO PDV -->
 <div id="controleCaixa">
   <div id="caixaFechado">
-    <input type="number" id="valorAbertura" placeholder="Valor de abertura do caixa">
+    <input type="number" id="valorAbertura" placeholder="Valor de abertura">
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
   <div id="caixaAberto" style="display:none">
-    <b>Caixa aberto</b> | Abertura: R$ <span id="valorAberturaInfo"></span>
+    Caixa aberto | Abertura R$ <span id="valorAberturaInfo"></span>
     <button onclick="fecharCaixa()">Fechar Caixa</button>
   </div>
 </div>
@@ -50,17 +47,16 @@
 <div class="total">Total: R$ <span id="total">0.00</span></div>
 
 <select id="pagamento">
-  <option value="">Forma de pagamento</option>
+  <option value="">Pagamento</option>
   <option value="dinheiro">Dinheiro</option>
   <option value="pix">Pix</option>
   <option value="cartao">Cartão</option>
 </select>
 
-<input type="number" id="valorPago" placeholder="Valor pago (dinheiro)">
+<input type="number" id="valorPago" placeholder="Valor pago">
 <div id="troco"></div>
 
 <button onclick="finalizarVenda()">Finalizar Venda</button>
-
 <canvas id="graficoPDV"></canvas>
 </div>
 
@@ -69,16 +65,17 @@
 <h2>Clientes</h2>
 <input id="nomeCliente" placeholder="Nome">
 <select id="planoCliente"></select>
-<button onclick="salvarCliente()">Salvar</button>
+<button onclick="salvarCliente()">Salvar / Ativar Plano</button>
 <ul id="listaClientes"></ul>
 </div>
 
 <!-- PLANOS -->
 <div id="planos" class="section">
 <h2>Planos</h2>
-<input id="nomePlano" placeholder="Nome do plano">
+<input id="nomePlano" placeholder="Nome">
+<input type="number" id="valorPlano" placeholder="Valor">
 <input type="number" id="qtdPlano" placeholder="Qtd serviços">
-<input id="tipoPlano" placeholder="Tipo do serviço">
+<input id="tipoPlano" placeholder="Tipo serviço">
 <button onclick="salvarPlano()">Salvar</button>
 <ul id="listaPlanos"></ul>
 </div>
@@ -104,17 +101,6 @@
 <input type="date" id="dataDespesa">
 <button onclick="salvarDespesa()">Salvar</button>
 <ul id="listaDespesas"></ul>
-</div>
-
-<!-- AGENDA -->
-<div id="agenda" class="section">
-<h2>Agenda</h2>
-<input type="date" id="dataAgenda">
-<input type="time" id="horaAgenda">
-<input id="clienteAgenda" placeholder="Cliente">
-<input id="servicoAgenda" placeholder="Serviço">
-<button onclick="salvarAgenda()">Salvar</button>
-<ul id="listaAgenda"></ul>
 </div>
 
 </div>
