--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -19,6 +20,7 @@
   <button onclick="show('planos')">💳</button>
   <button onclick="show('estoque')">📦</button>
   <button onclick="show('despesas')">🧾</button>
+  <button onclick="show('relatorios')">📑</button>
 </div>
 
 <div class="content">
@@ -29,12 +31,12 @@
 
 <div id="controleCaixa">
   <div id="caixaFechado">
-    <input type="number" id="valorAbertura" placeholder="Valor de abertura">
+    <input type="number" id="valorAbertura" placeholder="Valor de abertura do caixa">
     <button onclick="abrirCaixa()">Abrir Caixa</button>
   </div>
 
   <div id="caixaAberto" style="display:none">
-    Caixa aberto | Abertura R$ <span id="valorAberturaInfo"></span>
+    Caixa aberto | Abertura: R$ <span id="valorAberturaInfo"></span>
     <button onclick="fecharCaixa()">Fechar Caixa</button>
   </div>
 </div>
@@ -53,7 +55,7 @@
   <option value="cartao">Cartão</option>
 </select>
 
-<input type="number" id="valorPago" placeholder="Valor pago">
+<input type="number" id="valorPago" placeholder="Valor pago (dinheiro)">
 <div id="troco"></div>
 
 <button onclick="finalizarVenda()">Finalizar Venda</button>
@@ -72,10 +74,10 @@
 <!-- PLANOS -->
 <div id="planos" class="section">
 <h2>Planos</h2>
-<input id="nomePlano" placeholder="Nome">
+<input id="nomePlano" placeholder="Nome do plano">
 <input type="number" id="valorPlano" placeholder="Valor">
 <input type="number" id="qtdPlano" placeholder="Qtd serviços">
-<input id="tipoPlano" placeholder="Tipo serviço">
+<select id="tipoPlano"></select>
 <button onclick="salvarPlano()">Salvar</button>
 <ul id="listaPlanos"></ul>
 </div>
@@ -101,6 +103,13 @@
 <input type="date" id="dataDespesa">
 <button onclick="salvarDespesa()">Salvar</button>
 <ul id="listaDespesas"></ul>
+</div>
+
+<!-- RELATÓRIOS -->
+<div id="relatorios" class="section">
+<h2>Relatório Mensal</h2>
+<input type="month" id="mesRelatorio">
+<button onclick="gerarRelatorioMensal()">Gerar PDF</button>
 </div>
 
 </div>
